--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "aurelia-tools": "^0.1.3",
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
+    "balanced-match": "^0.2.1",
     "browser-sync": "^1.8.1",
+    "concat-map": "0.0.1",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
     "gulp": "^3.8.10",
@@ -47,10 +49,12 @@
     "karma-coverage": "^0.3.1",
     "karma-jasmine": "^0.3.5",
     "karma-jspm": "2.0.1-beta.2",
+    "lodash": "^3.10.1",
     "object.assign": "^1.0.3",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2",
     "vinyl-paths": "^1.0.0",
+    "wrappy": "^1.0.1",
     "yargs": "^2.1.1"
   },
   "jspm": {
